# advent-of-wasm

./: .gitignore  Cargo.toml  build.rs  db.md  flake.nix  kv-store.md
queries/: bench_list.prql  bench_queue.prql  execute.prql  instance.prql  overview.prql  problem.prql  query.prql  submit.prql
src/: async_sqlite.rs  bencher.rs  chart.rs  db.rs  hash.rs  lib.rs  main.rs  migration.rs  orm.rs  orm_example.rs  orm_idea.md  pages.rs  problem.rs  queries.rs  solution.rs  style.css  submission.rs  task.rs
src/migration/: 000_initial.sql  initial.sql  schema.prisma
src/orm/: ast.rs  orm_idea.md  row.rs  table.rs  value.rs
src/pages/: login.rs  problem.rs  problem_list.rs  submission.rs
src/queries/: bench_queue.rs  query.rs
