# [workspace]
# members = ["prisma-cli"]

[package]
name = "advent-of-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["macros", "multipart"] }
base64 = "0.13.1"
# diesel = { version = "2.0.4", features = ["sqlite"], default-features = false }
fehler = "1.0.0"
ghost-cell = "0.2.3"
k12 = "0.2.1"
maud = "0.24.0"
phtm = "1.0.3"
# oauth2 = "4.3.0"
rand = "0.8.5"
sea-query = "0.28.5"
serde = { version = "1.0.151", features = ["serde_derive"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
# wasmtime = { version = "4.0.0", default-features = false, features = ["cranelift"] }

# [dependencies.prisma-client-rust]
# git = "https://github.com/Brendonovich/prisma-client-rust"
# tag = "0.6.8"
# default-features = false
# features = [ "sqlite" ]
