[package]
name = "advent-of-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.13.1"
fehler = "1.0.0"
k12 = "0.2.1"
maud = "0.26.0"
oauth2 = "4.4.2"
rand = "0.8.5"
rusqlite = { version = "0.30.0" }
rusqlite_migration = "1.0.1"
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_json = "1.0.115"

tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
wasmtime = { version = "19", default-features = false, features = ["cranelift", "runtime", "wat"] }

rust-query = { git = "https://github.com/LHolten/rust-query.git", rev = "0335040" }
reqwest = "0.12.3"

[build-dependencies]
rust-query = { git = "https://github.com/LHolten/rust-query.git", rev = "0335040" }

